// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpanFC should allow markdown in label 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label md">
      <strong>
        Bold Label
      </strong>
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
  </span>
</span>
`;

exports[`SpanFC should handle badge text with no match in label 1`] = `
<span class="kol-span kol-span--has-badge">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Test Label
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      X
    </kbd>
  </span>
</span>
`;

exports[`SpanFC should hide label when hideLabel is true 1`] = `
<span class="kol-span kol-span--hide-label">
  <span class="kol-span__container">
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
  </span>
</span>
`;

exports[`SpanFC should render with badge text 1`] = `
<span class="kol-span kol-span--has-badge">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Label with
      <u>
        Badge
      </u>
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      Badge
    </kbd>
  </span>
</span>
`;

exports[`SpanFC should render with default props 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Default Label
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
  </span>
</span>
`;

exports[`SpanFC should render with icons 1`] = `
<span class="kol-span">
  <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--top top-icon" role="presentation"></i>
  <span class="kol-span__container">
    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left left-icon" role="presentation"></i>
    <span class="kol-span__label">
      Label with Icons
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right right-icon" role="presentation"></i>
  </span>
  <i aria-hidden="true" class="bottom-icon kol-icon kol-icon__icon kol-span__icon kol-span__icon--bottom" role="presentation"></i>
</span>
`;

exports[`SpanFC should try lowercase badge text variant when no uppercase match 1`] = `
<span class="kol-span kol-span--has-badge">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Test Label
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      TEST
    </kbd>
  </span>
</span>
`;

exports[`SpanFC should try uppercase badge text variant when no exact match 1`] = `
<span class="kol-span kol-span--has-badge">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Test Label
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      test
    </kbd>
  </span>
</span>
`;

exports[`SpanFC should underline exact badge text match in label 1`] = `
<span class="kol-span kol-span--has-badge">
  <span class="kol-span__container">
    <span class="kol-span__label">
      <u>
        T
      </u>
      est Label
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      T
    </kbd>
  </span>
</span>
`;

exports[`SpanFC should underline multi-char badge text in label 1`] = `
<span class="kol-span kol-span--has-badge">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Te
      <u>
        st
      </u>
      Label
    </span>
    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      st
    </kbd>
  </span>
</span>
`;
